Add comprehensive Gluten-Free Dining FAQ page
- 2,326 words of valuable FAQ content
- Covers: GF dining in Austin, cross-contamination, restaurant tips, celiac safety
- Includes FAQ schema markup for rich search results
- Added to sitemap and linked from main guide
- Internal links to relevant restaurant pages

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -130,6 +130,7 @@
                     <li><a href="#events">Events &amp; Seasonal Pop-Ups</a></li>
                     <li><a href="#safety">Celiac Safety Checklist</a></li>
                     <li><a href="#resources">Local Resources &amp; Support Groups</a></li>
+                    <li><a href="gluten-free-faq.html"><strong>FAQ: Common Questions About GF Dining</strong></a></li>
                 </ul>
             </section>
 
