Add FAQ link to main navigation and footer
- FAQ now accessible from main nav menu
- Added FAQ to Quick Links in footer
- Removed redundant 'Our Story' link from nav

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#restaurants" class="nav-link">Restaurants</a></li>
-                        <li><a href="guides/gluten-free-austin-guide.html" class="nav-link">Guide</a></li>
+                    <li><a href="guides/gluten-free-austin-guide.html" class="nav-link">Guide</a></li>
+                    <li><a href="guides/gluten-free-faq.html" class="nav-link">FAQ</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
-                        <li><a href="about.html" class="nav-link">Our Story</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
                 <div class="hamburger">
@@ -493,8 +493,8 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#restaurants">Restaurants</a></li>
                         <li><a href="guides/gluten-free-austin-guide.html">Gluten-Free Guide</a></li>
+                        <li><a href="guides/gluten-free-faq.html">FAQ</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="about.html">Our Story</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
