Implement lazy loading and performance optimizations
Performance improvements:
- Add loading='lazy' and decoding='async' to all images
- Add width/height attributes to prevent layout shift (CLS)
- Add fetchpriority='high' to hero image for faster LCP
- Add preconnect hints for fonts.googleapis.com, fonts.gstatic.com, cdnjs.cloudflare.com
- Add dns-prefetch for Google Tag Manager and AdSense
- Inline critical CSS for faster first paint
- Non-blocking CSS loading with media='print' trick
- Defer main script.js loading
- Add content-visibility: auto for off-screen sections
- Add aspect-ratio to images for better CLS scores
- Add background-color placeholders for images during load

Updated files:
- index.html: Critical rendering path optimizations
- styles.css: Performance CSS additions
- script.js: Lazy loading for dynamic restaurant cards
- All 37 restaurant pages: Lazy loading + preconnect
- Guide pages: Preconnect hints

--- a/restaurants/bulevar.html
+++ b/restaurants/bulevar.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Preconnect for faster resource loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -116,11 +120,11 @@
                 <div class="restaurant-header">
                     <div class="restaurant-images">
                         <div class="image-gallery">
-                            <img src="../images/restaurants/Bulevar-1.png" alt="Bulevar - 100% gluten-free Mexican kitchen in Austin" class="main-image">
+                            <img src="../images/restaurants/Bulevar-1.png" alt="Bulevar - 100% gluten-free Mexican kitchen in Austin" class="main-image" loading="lazy" decoding="async" width="600" height="400">
                             <div class="thumbnail-gallery">
                                 <img src="../images/restaurants/Bulevar-1.png" alt="Bulevar" class="thumbnail active" onclick="changeMainImage(this)">
-                                <img src="../images/restaurants/Bulevar-2.png" alt="Bulevar" class="thumbnail" onclick="changeMainImage(this)">
-                                <img src="../images/restaurants/Bulevar-3.png" alt="Bulevar" class="thumbnail" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Bulevar-2.png" alt="Bulevar" class="thumbnail" loading="lazy" decoding="async" onclick="changeMainImage(this)">
+                                <img src="../images/restaurants/Bulevar-3.png" alt="Bulevar" class="thumbnail" loading="lazy" decoding="async" onclick="changeMainImage(this)">
                             </div>
                         </div>
                     </div>
