--- a/restaurants/dias-market.html
+++ b/restaurants/dias-market.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Preconnect for faster resource loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -111,7 +115,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/25-1.jpg" alt="Dia's Market - specialty deli in East Austin" class="main-image">
+                        <img src="../images/restaurants/25-1.jpg" alt="Dia's Market - specialty deli in East Austin" class="main-image" loading="lazy" decoding="async" width="600" height="400">
                     </div>
                     <div class="restaurant-info">
                         <h1>Dia's Market</h1>
