Add targeted SEO guides for GF Pizza and Breakfast in Austin
New pages targeting high-search-volume keywords:
- guides/gluten-free-pizza-austin.html (~2,500 words)
  - Targets: 'gluten free pizza austin' (200+ monthly searches)
  - Covers: Pieous, ATX Cocina, Via 313, Pinthouse, etc.
  - Includes safety ratings, FAQ schema, ordering tips

- guides/gluten-free-breakfast-austin.html (~2,800 words)
  - Targets: 'gluten free breakfast austin' (150+ monthly searches)
  - Covers: Bougie's, Bird Bird, Picnik, The Well, etc.
  - Sections: biscuits, donuts, pancakes, healthy bowls

SEO optimizations:
- Full Schema.org Article + FAQ markup
- Internal links to restaurant pages
- Long-form content for ranking
- Optimized meta titles/descriptions

Also updated:
- sitemap.xml: Added both new guides
- index.html: Footer links to new guides
- gluten-free-austin-guide.html: Cross-links to new guides

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -221,6 +221,16 @@
             </section>
 
             <section>
+                <h2>More Gluten-Free Guides</h2>
+                <p>Looking for something specific? Check out our specialized guides:</p>
+                <ul style="margin-left:1.5rem;line-height:1.8;">
+                    <li><strong><a href="gluten-free-pizza-austin.html">Gluten-Free Pizza in Austin</a>:</strong> Find the best GF pizza from dedicated ovens to pizzerias with GF crusts.</li>
+                    <li><strong><a href="gluten-free-breakfast-austin.html">Gluten-Free Breakfast in Austin</a>:</strong> GF pancakes, waffles, biscuits, donuts, and brunch spots.</li>
+                    <li><strong><a href="gluten-free-faq.html">Gluten-Free Dining FAQ</a>:</strong> Common questions answered about eating GF in Austin.</li>
+                </ul>
+            </section>
+
+            <section>
                 <h2>Ready to Explore?</h2>
                 <p>Use this guide alongside our searchable directory to map out breakfasts, lunches, dinners, and dessert runs. When you discover new gluten-free gems, share them at <a href="mailto:info@austinglutenfree.com">info@austinglutenfree.com</a> so we can verify and add them for future travelers. Together we keep Austin safe, inclusive, and delicious for the entire gluten-free community.</p>
                 <p style="margin-top:2rem;"><a href="../#restaurants" class="btn btn-primary" style="display:inline-block;">Browse the Restaurant Directory</a></p>
