--- a/index.html
+++ b/index.html
@@ -535,12 +535,12 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Popular Areas</h4>
+                    <h4>GF Guides</h4>
                     <ul>
-                        <li><a href="#">Downtown Austin</a></li>
-                        <li><a href="#">South Austin</a></li>
-                        <li><a href="#">East Austin</a></li>
-                        <li><a href="#">Cedar Park</a></li>
+                        <li><a href="guides/gluten-free-pizza-austin.html">GF Pizza in Austin</a></li>
+                        <li><a href="guides/gluten-free-breakfast-austin.html">GF Breakfast & Brunch</a></li>
+                        <li><a href="guides/gluten-free-austin-guide.html">Complete Austin Guide</a></li>
+                        <li><a href="guides/gluten-free-faq.html">FAQ</a></li>
                         <li><a href="guides/gluten-free-austin-guide.html#itineraries">Weekend Itineraries</a></li>
                     </ul>
                 </div>
