--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -381,9 +381,16 @@
             </div>
 
             <div class="restaurant-card-mini">
-                <h4>Brick Oven on 35th <span class="safety-rating safety-medium">GF Crust Available</span></h4>
-                <div class="meta">📍 Central Austin | 💰 $$ | ⭐ 4.2</div>
-                <p class="description">Long-standing Austin pizzeria with a gluten-free crust option. Family-friendly atmosphere and accommodating staff who understand GF requests.</p>
+                <h4>MOD Pizza (Multiple Locations) <span class="safety-rating safety-low">⚠️ Shared Kitchen</span></h4>
+                <div class="meta">📍 8+ Austin Locations | 💰 $ | ⭐ 4.3</div>
+                <p class="description">Build-your-own pizza chain offering <strong>gluten-friendly and cauliflower crust options</strong>. MOD has 8+ locations across Austin including Domain, Mueller, South Lamar, and Round Rock. Affordable and customizable—choose unlimited toppings at one price.</p>
+                <p><strong>GF Crust Options:</strong></p>
+                <ul>
+                    <li>Gluten-friendly crust (made without gluten ingredients)</li>
+                    <li>Cauliflower crust (lower carb option)</li>
+                </ul>
+                <p><strong>⚠️ Important Warning:</strong> MOD Pizza prepares ALL food on a single shared serving line. They explicitly state they <strong>cannot guarantee</strong> any menu item is free of allergens or gluten. <strong>Not recommended for celiac disease or severe gluten sensitivity.</strong></p>
+                <p><strong>Best for:</strong> Those with mild gluten sensitivity or choosing GF by preference, not medical necessity.</p>
             </div>
 
             <h2 id="italian-restaurants">🇮🇹 Italian Restaurants with GF Pizza/Flatbreads</h2>
