Add Bambino pizzeria to GF Pizza guide
- Bambino (979 Springdale Rd, East Austin) opened March 2024
- GF crust available for +
- From L'Oca d'Oro team, uses organic Barton Springs Mill flour
- Noted as shared kitchen, ask about protocols

--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -375,6 +375,16 @@
             </div>
 
             <div class="restaurant-card-mini">
+                <h4>Bambino <span class="safety-rating safety-medium">GF Crust Available (+$5)</span></h4>
+                <div class="meta">📍 East Austin (Springdale) | 💰 $$ | ⭐ 4.7</div>
+                <p class="description"><strong>Artisan pizza with exceptional ingredients.</strong> <a href="https://www.bambinoaustin.com" target="_blank" rel="noopener">Bambino</a> opened in March 2024 from the team behind L'Oca d'Oro. Chef Fiore Tedesco brings 30 years of expertise to every pie, using organic Central Texas flour from Barton Springs Mill and house-made fresh mozzarella. GF crust available for +$5.</p>
+                <p><strong>Address:</strong> 979 Springdale Rd, Suite 153, Austin TX 78702</p>
+                <p><strong>Hours:</strong> Closed Mon | Tues-Fri 4-10pm (+ Fri 12-2pm) | Sat-Sun 11am-10pm</p>
+                <p><strong>The Vibe:</strong> 80s-inspired, grown-up pizzeria with a commitment to quality ingredients and fair worker treatment (20% service charge supports employee benefits).</p>
+                <p><strong>Note:</strong> Shared kitchen environment. Ask about cross-contamination protocols when ordering GF.</p>
+            </div>
+
+            <div class="restaurant-card-mini">
                 <h4>Salvation Pizza <span class="safety-rating safety-medium">GF Crust Available</span></h4>
                 <div class="meta">📍 Anderson Lane | 💰 $$ | ⭐ 4.3</div>
                 <p class="description">This neighborhood pizzeria offers Caulipower gluten-free cauliflower crust as an option. A lighter alternative that's become popular with the GF community.</p>
