Remove ATX Cocina from GF Pizza guide
- Removed per user feedback (tlayudas aren't true pizza)
- Updated safety recommendations section accordingly

--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -333,13 +333,6 @@
             </div>
 
             <div class="restaurant-card-mini">
-                <h4>ATX Cocina <span class="safety-rating safety-high">100% Gluten-Free</span></h4>
-                <div class="meta">📍 Downtown (2nd Street District) | 💰 $$$ | ⭐ 4.7</div>
-                <p class="description">While not a traditional pizzeria, <a href="../restaurants/atx-cocina.html">ATX Cocina</a> is a <strong>100% gluten-free restaurant</strong> that serves Mexican-inspired flatbreads and tlayudas (Oaxacan pizza-like dishes) made with their house-made nixtamal masa. A completely safe environment for celiacs craving something pizza-adjacent.</p>
-                <p><strong>Must-try:</strong> Tlayuda with your choice of toppings—crispy, delicious, and 100% safe.</p>
-            </div>
-
-            <div class="restaurant-card-mini">
                 <h4>The Well (3 Locations) <span class="safety-rating safety-high">100% Gluten-Free</span></h4>
                 <div class="meta">📍 Downtown, Westlake, Congress | 💰 $$$ | ⭐ 4.4</div>
                 <p class="description"><a href="../restaurants/the-well---downtown.html">The Well</a> is 100% gluten-free, dairy-free, and seed oil-free. While they don't serve traditional pizza, their grain-free flatbreads and creative appetizers satisfy similar cravings in a completely celiac-safe environment.</p>
@@ -464,7 +457,7 @@
                 <p>Most Austin pizzerias prepare GF crusts in shared environments with regular flour. If you have celiac disease or severe gluten sensitivity, your safest options are:</p>
                 <ul>
                     <li><strong>Pieous</strong> (dedicated GF oven)</li>
-                    <li><strong>ATX Cocina</strong> or <strong>The Well</strong> (100% GF kitchens)</li>
+                    <li><strong>The Well</strong> (100% GF kitchen with flatbreads)</li>
                 </ul>
                 <p>For shared-kitchen pizzerias, assess your personal tolerance level and always communicate clearly with staff.</p>
             </div>
