--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -118,22 +118,62 @@
     
     <style>
         .guide-hero {
-            background: linear-gradient(135deg, #2d5016 0%, #4a7c59 50%, #d4a574 100%);
+            position: relative;
             color: white;
-            padding: 100px 20px 60px;
+            padding: 120px 20px 80px;
             text-align: center;
+            min-height: 350px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
+        .guide-hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('../images/pizza-hero.jpg') center center / cover no-repeat;
+            z-index: -2;
+        }
+        .guide-hero::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(45, 80, 22, 0.85) 0%, rgba(74, 124, 89, 0.8) 50%, rgba(139, 69, 19, 0.75) 100%);
+            z-index: -1;
         }
         .guide-hero h1 {
             font-family: 'Playfair Display', serif;
             font-size: 2.8rem;
             margin-bottom: 1rem;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+            position: relative;
+            z-index: 1;
         }
         .guide-hero p {
             font-size: 1.2rem;
             max-width: 700px;
             margin: 0 auto;
             opacity: 0.95;
+            text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+            position: relative;
+            z-index: 1;
+        }
+        @media (max-width: 768px) {
+            .guide-hero {
+                min-height: 280px;
+                padding: 100px 15px 60px;
+            }
+            .guide-hero h1 {
+                font-size: 2rem;
+            }
         }
         .guide-content {
             max-width: 900px;
