--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -136,7 +136,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('../images/pizza-hero.jpg') center center / cover no-repeat;
+            background: url('../images/Pizza_hero.png') center center / cover no-repeat;
             z-index: -2;
         }
         .guide-hero::after {
