Update Hopdoddy and Lil'Doddy with new GF-focused images
- Replace 4 generic images with 5 new images showing GF buns and options
- Updated: GF-Bun-1, GF-Bun-2, GF-Bun-3, Bowl-4, Brussels-5
- Updated script.js, both detail pages, OG images, and schema.org

--- a/restaurants/hopdoddy-burger-bar---south-congress.html
+++ b/restaurants/hopdoddy-burger-bar---south-congress.html
@@ -39,7 +39,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/hopdoddy-burger-bar---south-congress.html">
     <meta property="og:title" content="Hopdoddy - South Congress | GF Buns Available">
     <meta property="og:description" content="Austin's beloved craft burger bar with gluten-free buns on South Congress.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/HopDoddy-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -76,7 +76,7 @@
         "addressCountry": "US"
       },
       "url": "https://www.hopdoddy.com",
-      "image": "https://austinglutenfree.com/images/restaurants/HopDoddy-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.4",
@@ -117,12 +117,13 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/HopDoddy-1.png" alt="Hopdoddy Burger Bar - South Congress - gluten-free restaurant in Austin" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
+                        <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png" alt="Hopdoddy Burger Bar - South Congress - gluten-free burger with GF bun in Austin" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
                         <div class="thumbnail-gallery">
-                                <img src="../images/restaurants/HopDoddy-1.png" alt="Hopdoddy Burger Bar - South Congress photo 1" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-2.png" alt="Hopdoddy Burger Bar - South Congress photo 2" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-3.png" alt="Hopdoddy Burger Bar - South Congress photo 3" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-4.png" alt="Hopdoddy Burger Bar - South Congress photo 4" class="thumbnail" data-index="3" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png" alt="Hopdoddy gluten-free bun burger" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-2.png" alt="Hopdoddy GF bun close-up" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-3.png" alt="Hopdoddy gluten-free burger option" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_Bowl-4.png" alt="Hopdoddy gluten-free bowl option" class="thumbnail" data-index="3" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_Brussels-5.png" alt="Hopdoddy gluten-free brussels sprouts" class="thumbnail" data-index="4" loading="lazy" decoding="async" width="100" height="80">
                         </div>
                     </div>
                     <div class="restaurant-info">
