--- a/restaurants/lildoddy-burger-lab.html
+++ b/restaurants/lildoddy-burger-lab.html
@@ -39,7 +39,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/lildoddy-burger-lab.html">
     <meta property="og:title" content="Lil'Doddy Burger Lab | GF Buns Available">
     <meta property="og:description" content="Hopdoddy's fast-casual concept with gluten-free buns and drive-thru.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/HopDoddy-1.png">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -76,7 +76,7 @@
         "addressCountry": "US"
       },
       "url": "https://www.hopdoddy.com",
-      "image": "https://austinglutenfree.com/images/restaurants/HopDoddy-1.png",
+      "image": "https://austinglutenfree.com/images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.3",
@@ -117,12 +117,13 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/HopDoddy-1.png" alt="Lil'Doddy Burger Lab - gluten-free restaurant in Austin" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
+                        <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png" alt="Lil'Doddy Burger Lab - gluten-free burger with GF bun in Austin" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
                         <div class="thumbnail-gallery">
-                                <img src="../images/restaurants/HopDoddy-1.png" alt="Lil'Doddy Burger Lab photo 1" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-2.png" alt="Lil'Doddy Burger Lab photo 2" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-3.png" alt="Lil'Doddy Burger Lab photo 3" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
-                                <img src="../images/restaurants/HopDoddy-4.png" alt="Lil'Doddy Burger Lab photo 4" class="thumbnail" data-index="3" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-1.png" alt="Lil'Doddy gluten-free bun burger" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-2.png" alt="Lil'Doddy GF bun close-up" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_GF-Bun-3.png" alt="Lil'Doddy gluten-free burger option" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_Bowl-4.png" alt="Lil'Doddy gluten-free bowl option" class="thumbnail" data-index="3" loading="lazy" decoding="async" width="100" height="80">
+                                <img src="../images/restaurants/HopDoddy_LilDoddy_Brussels-5.png" alt="Lil'Doddy gluten-free brussels sprouts" class="thumbnail" data-index="4" loading="lazy" decoding="async" width="100" height="80">
                         </div>
                     </div>
                     <div class="restaurant-info">
