Update breakfast recommendation from Bom Bakeshop to Bird Bird Biscuit
- Bom Bakery may be pausing services and no longer has kolaches
- Changed to feature Bird Bird Biscuit's GF biscuit sandwiches instead

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <p>Before a restaurant is added to Austin Gluten Free, we confirm dedicated gluten-free training with the kitchen team, review cross-contamination procedures, and evaluate whether separate fryers, toasters, or prep surfaces are in place. We also speak with diners who live with celiac disease and food allergies to gather real-world experiences.</p>
                     <p>We revisit restaurants quarterly to ensure nothing has changed. If ownership shifts or menu processes are updated, we pause recommendations until the team reconfirms safe practices. You’ll notice “Editor’s Notes” on individual pages detailing what to request when ordering and who to ask for if you have questions.</p>
                     <h3>Plan Your Perfect Gluten-Free Day</h3>
-                    <p>Start your morning at a dedicated bakery like Bom Bakeshop for traditional kolaches, then head downtown for lunch at Salt Traders where every fryer is gluten-free. Cap the evening with a wood-fired dinner at Red Ash or Intero—both offer handmade gluten-free pasta and staff trained to prevent cross-contact. Check our guide for more sample itineraries and weekend-friendly plans.</p>
+                    <p>Start your morning at Bird Bird Biscuit for their famous gluten-free biscuit sandwiches, then head downtown for lunch at Salt Traders where every fryer is gluten-free. Cap the evening with a wood-fired dinner at Red Ash or Intero—both offer handmade gluten-free pasta and staff trained to prevent cross-contact. Check our guide for more sample itineraries and weekend-friendly plans.</p>
                 </article>
             </div>
         </section>
