Add Italian Chop Salad as GF recommendation to Pinthouse pages

--- a/restaurants/pinthouse-pizza-south-lamar.html
+++ b/restaurants/pinthouse-pizza-south-lamar.html
@@ -167,7 +167,8 @@
                                 <li><strong>Vegan Cheese:</strong> Available to pair with GF crust for dairy-free diners</li>
                                 <li><strong>Plant-Based Sausage:</strong> Vegan protein option that's also gluten-free</li>
                                 <li><strong>Full Menu Access:</strong> Any pizza on the menu can be made on GF crust</li>
-                                <li><strong>Salads:</strong> Several naturally GF salad options available</li>
+                                <li><strong>Italian Chop Salad:</strong> A GF standout—crisp greens with Italian flavors, highly recommended!</li>
+                                <li><strong>Other Salads:</strong> Several naturally GF salad options available</li>
                             </ul>
                             <p><strong>Cross-Contamination Note:</strong> Pinthouse uses shared ovens and prep areas for all pizzas. The GF crust is stored separately and staff are trained on GF requests, but those with celiac disease should be aware of potential cross-contamination. Always communicate the severity of your gluten sensitivity to your server.</p>
                         </div>
