--- a/restaurants/pinthouse-pizza-round-rock.html
+++ b/restaurants/pinthouse-pizza-round-rock.html
@@ -39,7 +39,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/pinthouse-pizza-round-rock.html">
     <meta property="og:title" content="Pinthouse Pizza - Round Rock | GF Pizza & Craft Beer">
     <meta property="og:description" content="Ancient grain gluten-free crust and award-winning craft beer in Round Rock.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/49-1.jpg">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/Pinthouse-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -76,7 +76,7 @@
         "addressCountry": "US"
       },
       "url": "https://pinthouse.com",
-      "image": "https://austinglutenfree.com/images/restaurants/49-1.jpg",
+      "image": "https://austinglutenfree.com/images/restaurants/Pinthouse-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
@@ -117,11 +117,12 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/49-1.jpg" alt="Pinthouse Pizza Round Rock - gluten-free pizza in Round Rock" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
+                        <img src="../images/restaurants/Pinthouse-1.png" alt="Pinthouse Pizza Round Rock - gluten-free pizza in Round Rock" class="main-image" id="mainImage" loading="lazy" decoding="async" width="600" height="400">
                         <div class="thumbnail-gallery">
-                            <img src="../images/restaurants/49-1.jpg" alt="Pinthouse Pizza Round Rock exterior" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
-                            <img src="../images/restaurants/49-2.jpg" alt="Pinthouse gluten-free pizza" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
-                            <img src="../images/restaurants/49-3.jpg" alt="Pinthouse craft beer selection" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
+                            <img src="../images/restaurants/Pinthouse-1.png" alt="Pinthouse gluten-free pizza" class="thumbnail" data-index="0" loading="lazy" decoding="async" width="100" height="80">
+                            <img src="../images/restaurants/Pinthouse-2.png" alt="Pinthouse GF pizza option" class="thumbnail" data-index="1" loading="lazy" decoding="async" width="100" height="80">
+                            <img src="../images/restaurants/Pinthouse-3.png" alt="Pinthouse Italian Chop Salad" class="thumbnail" data-index="2" loading="lazy" decoding="async" width="100" height="80">
+                            <img src="../images/restaurants/Pinthouse-4.png" alt="Pinthouse craft beer and pizza" class="thumbnail" data-index="3" loading="lazy" decoding="async" width="100" height="80">
                         </div>
                     </div>
                     <div class="restaurant-info">
