Update remaining 35+ references to 40+ for consistency

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://austinglutenfree.com/">
     <meta property="twitter:title" content="Austin Gluten Free Restaurants | Best GF Dining in Austin, Texas">
-    <meta property="twitter:description" content="Discover 35+ verified gluten-free restaurants in Austin, TX. Celiac-safe dining with dedicated menus & certified kitchens.">
+    <meta property="twitter:description" content="Discover 40+ verified gluten-free restaurants in Austin, TX. Celiac-safe dining with dedicated menus & certified kitchens.">
     <meta property="twitter:image" content="https://austinglutenfree.com/images/hero-background.jpg">
     
     <!-- Geographic Tags -->
@@ -196,7 +196,7 @@
           "name": "What are the best gluten-free restaurants in Austin?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Austin has 35+ excellent gluten-free restaurants including Salt Traders (100% gluten-free seafood), Bom Bakeshop (dedicated GF bakery), Picnik (healthy café with GF options), and True Food Kitchen (extensive GF menu). Many offer dedicated gluten-free kitchens and celiac-safe protocols."
+            "text": "Austin has 40+ excellent gluten-free restaurants including Salt Traders (100% gluten-free seafood), Pinthouse Pizza (ancient grain GF crust), Picnik (healthy café with GF options), and True Food Kitchen (extensive GF menu). Many offer dedicated gluten-free kitchens and celiac-safe protocols."
           }
         },
         {
