Add Ezoic ad placeholders to all restaurant and guide pages

--- a/guides/gluten-free-faq.html
+++ b/guides/gluten-free-faq.html
@@ -198,7 +198,16 @@
                 <header class="guide-header">
                     <h1>Gluten-Free Dining FAQ</h1>
                     <p class="guide-subtitle">Common Questions About Eating Gluten-Free in Austin, Texas</p>
-                    <p class="last-updated"><i class="fas fa-calendar-alt"></i> Last Updated: December 2025</p>
+                    
+            <!-- Ezoic Ad Placeholder 303 -->
+            <div id="ezoic-pub-ad-placeholder-303" class="ezoic-ad" style="margin: 2rem 0;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(303);
+                });
+            </script>
+
+            <p class="last-updated"><i class="fas fa-calendar-alt"></i> Last Updated: December 2025</p>
                 </header>
 
                 <div class="toc">
