--- a/restaurants/snap-kitchen---cedar-park.html
+++ b/restaurants/snap-kitchen---cedar-park.html
@@ -144,6 +144,14 @@
             </div>
         </section>
 
+        <!-- Ezoic Ad Placeholder 201 -->
+        <div id="ezoic-pub-ad-placeholder-201" class="ezoic-ad"></div>
+        <script>
+            ezstandalone.cmd.push(function() {
+                ezstandalone.showAds(201);
+            });
+        </script>
+
         <section class="restaurant-details">
             <div class="container">
                 <div class="detail-grid">
@@ -238,6 +246,14 @@
                                 <p><i class="fas fa-globe"></i> <strong>Website:</strong><br><a href="https://www.snapkitchen.com" target="_blank">snapkitchen.com</a></p>
                             </div>
                         </div>
+
+                        <!-- Ezoic Ad Placeholder 202 -->
+                        <div id="ezoic-pub-ad-placeholder-202" class="ezoic-ad" style="margin-bottom: 1.5rem;"></div>
+                        <script>
+                            ezstandalone.cmd.push(function() {
+                                ezstandalone.showAds(202);
+                            });
+                        </script>
 
                         <div class="back-to-directory">
                             <a href="../#restaurants" class="btn btn-primary">← Back to All Restaurants</a>
