--- a/restaurants/intero.html
+++ b/restaurants/intero.html
@@ -148,6 +148,14 @@
             </div>
         </section>
 
+        <!-- Ezoic Ad Placeholder 201 -->
+        <div id="ezoic-pub-ad-placeholder-201" class="ezoic-ad"></div>
+        <script>
+            ezstandalone.cmd.push(function() {
+                ezstandalone.showAds(201);
+            });
+        </script>
+
         <section class="restaurant-details">
             <div class="container">
                 <div class="detail-grid">
@@ -274,6 +282,14 @@
                                 <p><i class="fas fa-clock"></i> <strong>Happy Hour:</strong><br>Tue-Thu 5:00-6:30 PM</p>
                             </div>
                         </div>
+
+                        <!-- Ezoic Ad Placeholder 202 -->
+                        <div id="ezoic-pub-ad-placeholder-202" class="ezoic-ad" style="margin-bottom: 1.5rem;"></div>
+                        <script>
+                            ezstandalone.cmd.push(function() {
+                                ezstandalone.showAds(202);
+                            });
+                        </script>
 
                         <div class="back-to-directory">
                             <a href="../#restaurants" class="btn btn-primary">← Back to All Restaurants</a>
