--- a/restaurants/thundercloud-subs.html
+++ b/restaurants/thundercloud-subs.html
@@ -144,6 +144,14 @@
             </div>
         </section>
 
+        <!-- Ezoic Ad Placeholder 201 -->
+        <div id="ezoic-pub-ad-placeholder-201" class="ezoic-ad"></div>
+        <script>
+            ezstandalone.cmd.push(function() {
+                ezstandalone.showAds(201);
+            });
+        </script>
+
         <section class="restaurant-details">
             <div class="container">
                 <div class="detail-grid">
@@ -285,6 +293,14 @@
                             <h4 style="color: #856404; margin-top: 0;"><i class="fas fa-exclamation-triangle"></i> Cross-Contamination</h4>
                             <p style="font-size: 0.9rem; margin-bottom: 0;">Shared kitchen environment. Not suitable for celiac disease or severe gluten allergies.</p>
                         </div>
+
+                        <!-- Ezoic Ad Placeholder 202 -->
+                        <div id="ezoic-pub-ad-placeholder-202" class="ezoic-ad" style="margin-bottom: 1.5rem;"></div>
+                        <script>
+                            ezstandalone.cmd.push(function() {
+                                ezstandalone.showAds(202);
+                            });
+                        </script>
 
                         <div class="back-to-directory">
                             <a href="../#restaurants" class="btn btn-primary">← Back to All Restaurants</a>
