Fix Ezoic ads on gluten-free-austin-guide.html - add active placeholders

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -134,6 +134,14 @@
                 </ul>
             </section>
 
+            <!-- Ezoic Ad Placeholder 109 -->
+            <div id="ezoic-pub-ad-placeholder-109" class="ezoic-ad" style="margin: 2rem 0;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(109);
+                });
+            </script>
+
             <section id="top-picks">
                 <h2>Top Gluten-Free Picks by Neighborhood</h2>
                 <p>Austin’s gluten-free dining scene stretches well beyond downtown. Use these highlights to plan meals near where you’re staying:</p>
@@ -164,6 +172,14 @@
                 <p><strong>Day 1:</strong> Start at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a> for macrobiotic plates, then bike the Lady Bird Lake trail. Grab smoothies from <a href="../restaurants/picnik---burnet-road.html">Picnik</a> and finish with vegan baked goods at <a href="../restaurants/zucchini-kill-bakery.html">Zucchini Kill</a>.</p>
                 <p><strong>Day 2:</strong> Brunch at <a href="../restaurants/bouldin-creek-cafe.html">Bouldin Creek Cafe</a> (ask for the GF tofu scramble), afternoon tea at <a href="../restaurants/the-steeping-room.html">The Steeping Room</a>, and a dinner tasting at <a href="../restaurants/uchi.html">Uchi</a>, where the chefs happily guide gluten-free omakase.</p>
             </section>
+
+            <!-- Ezoic Ad Placeholder 111 -->
+            <div id="ezoic-pub-ad-placeholder-111" class="ezoic-ad" style="margin: 2rem 0;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(111);
+                });
+            </script>
 
             <section id="breakfast">
                 <h2>Best Gluten-Free Breakfast &amp; Brunch Spots</h2>
@@ -219,6 +235,14 @@
                 </ul>
                 <p>Traveling beyond Austin? We’re expanding guides to San Antonio and Hill Country wineries—stay tuned for updates.</p>
             </section>
+
+            <!-- Ezoic Ad Placeholder 114 -->
+            <div id="ezoic-pub-ad-placeholder-114" class="ezoic-ad" style="margin: 2rem 0;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(114);
+                });
+            </script>
 
             <section>
                 <h2>More Gluten-Free Guides</h2>
@@ -278,16 +302,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Placeholder for future Ezoic placements (uncomment when IDs are available) -->
-    <!--
-    <div id="ezoic-pub-ad-placeholder-201"></div>
-    <script>
-        ezstandalone.cmd.push(function () {
-            ezstandalone.showAds(201);
-        });
-    </script>
-    -->
 
     <script src="../script.js"></script>
 </body>
