--- a/restaurants/the-well---congress.html
+++ b/restaurants/the-well---congress.html
@@ -150,17 +150,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <!-- Ezoic Ad Placeholder 109 -->
-        <div id="ezoic-pub-ad-placeholder-109" class="ezoic-ad"></div>
-        <script>
-            ezstandalone.cmd.push(function() {
-                ezstandalone.showAds(109);
-            });
-        </script>
-
-        <section class="restaurant-details">
+        </section>        <section class="restaurant-details">
             <div class="container">
                 <div class="detail-grid">
                     <div class="main-content">
