Remove mid-content ads from guide pages for better UX

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -171,17 +171,7 @@
                 <h3>Plant-Based &amp; Gluten-Free Explorer</h3>
                 <p><strong>Day 1:</strong> Start at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a> for macrobiotic plates, then bike the Lady Bird Lake trail. Grab smoothies from <a href="../restaurants/picnik---burnet-road.html">Picnik</a> and finish with vegan baked goods at <a href="../restaurants/zucchini-kill-bakery.html">Zucchini Kill</a>.</p>
                 <p><strong>Day 2:</strong> Brunch at <a href="../restaurants/bouldin-creek-cafe.html">Bouldin Creek Cafe</a> (ask for the GF tofu scramble), afternoon tea at <a href="../restaurants/the-steeping-room.html">The Steeping Room</a>, and a dinner tasting at <a href="../restaurants/uchi.html">Uchi</a>, where the chefs happily guide gluten-free omakase.</p>
-            </section>
-
-            <!-- Ezoic Ad Placeholder 111 -->
-            <div id="ezoic-pub-ad-placeholder-111" class="ezoic-ad" style="margin: 2rem 0;"></div>
-            <script>
-                ezstandalone.cmd.push(function() {
-                    ezstandalone.showAds(111);
-                });
-            </script>
-
-            <section id="breakfast">
+            </section>            <section id="breakfast">
                 <h2>Best Gluten-Free Breakfast &amp; Brunch Spots</h2>
                 <p>Breakfast is often the trickiest meal for gluten-free diners, but Austin excels at morning comfort food:</p>
                 <ul style="margin-left:1.5rem;line-height:1.8;">
