--- a/guides/gluten-free-breakfast-austin.html
+++ b/guides/gluten-free-breakfast-austin.html
@@ -416,18 +416,7 @@
                     <li><strong>Build Your Own:</strong> Any combination on GF biscuit</li>
                 </ul>
                 <p><strong>Note:</strong> The kitchen does handle regular flour, but they take GF prep seriously with dedicated tools and fresh gloves. Most celiacs report doing well here.</p>
-            </div>
-
-            
-            <!-- Ezoic Ad Placeholder 111 -->
-            <div id="ezoic-pub-ad-placeholder-111" class="ezoic-ad" style="margin: 2rem 0;"></div>
-            <script>
-                ezstandalone.cmd.push(function() {
-                    ezstandalone.showAds(111);
-                });
-            </script>
-
-<h2 id="donuts">🍩 GF Donuts & Pastries</h2>
+            </div><h2 id="donuts">🍩 GF Donuts & Pastries</h2>
 
             <div class="restaurant-card-mini">
                 <h4>Bom Bakeshop <span class="safety-rating safety-high">Dedicated GF Bakery</span></h4>
