--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -385,18 +385,7 @@
                 <h4>The Well (3 Locations) <span class="safety-rating safety-high">100% Gluten-Free</span></h4>
                 <div class="meta">📍 Downtown, Westlake, Congress | 💰 $$$ | ⭐ 4.4</div>
                 <p class="description"><a href="../restaurants/the-well---downtown.html">The Well</a> is 100% gluten-free, dairy-free, and seed oil-free. While they don't serve traditional pizza, their grain-free flatbreads and creative appetizers satisfy similar cravings in a completely celiac-safe environment.</p>
-            </div>
-
-            
-            <!-- Ezoic Ad Placeholder 111 -->
-            <div id="ezoic-pub-ad-placeholder-111" class="ezoic-ad" style="margin: 2rem 0;"></div>
-            <script>
-                ezstandalone.cmd.push(function() {
-                    ezstandalone.showAds(111);
-                });
-            </script>
-
-<h2 id="pizzerias">🍕 Pizzerias with Gluten-Free Crusts</h2>
+            </div><h2 id="pizzerias">🍕 Pizzerias with Gluten-Free Crusts</h2>
             
             <p>These popular Austin pizzerias offer gluten-free crust options. Note that they prepare GF pizzas in shared kitchen environments, so cross-contamination is possible. Best for those with gluten sensitivity rather than celiac disease.</p>
 
