Add sidebar ads to FAQ and Breakfast guide pages

--- a/guides/gluten-free-breakfast-austin.html
+++ b/guides/gluten-free-breakfast-austin.html
@@ -330,6 +330,14 @@
                 </ul>
             </div>
 
+            <!-- Ezoic Sidebar Ad -->
+            <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 300px;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(106);
+                });
+            </script>
+
             <p>Breakfast is often called the most important meal of the day, but for those of us avoiding gluten, it can also be the most challenging. Traditional breakfast staples—pancakes, waffles, biscuits, toast, pastries—are typically off-limits. The good news? Austin has become a haven for gluten-free breakfast lovers, with dedicated bakeries, 100% GF cafes, and accommodating restaurants throughout the city.</p>
 
             <p>This guide covers the best gluten-free breakfast and brunch spots in Austin, from completely celiac-safe establishments to cafes with excellent GF options. Whether you're craving fluffy pancakes, savory biscuit sandwiches, or artisanal donuts, Austin has you covered.</p>
