--- a/guides/gluten-free-faq.html
+++ b/guides/gluten-free-faq.html
@@ -213,6 +213,14 @@
                     </ul>
                 </div>
 
+                <!-- Ezoic Sidebar Ad -->
+                <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 300px;"></div>
+                <script>
+                    ezstandalone.cmd.push(function() {
+                        ezstandalone.showAds(106);
+                    });
+                </script>
+
                 <!-- General Questions Section -->
                 <section id="general" class="faq-section">
                     <h2><i class="fas fa-question-circle"></i> General Questions About GF Dining in Austin</h2>
